--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MeliSearcher"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.views.DetailtView"></activity>
+        <activity
+            android:name=".ui.views.DetailView"
+            android:label="@string/detalles"
+            android:configChanges="orientation" />
         <activity
             android:name=".ui.views.ResultsView"
             android:configChanges="orientation"
